# focal

./: .gitignore  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.md
core/: Cargo.toml
core/src/: config.rs  context.rs  db.rs  graph.rs  indexer.rs  lib.rs  main.rs  manifest.rs  mcp.rs  watcher.rs
core/src/grammar/: go.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
core/tests/: autocapture_test.rs  context_test.rs  db_test.rs  grammar_python_test.rs  grammar_rust_test.rs  grammar_test.rs  grammar_ts_test.rs  graph_test.rs  indexer_test.rs  integration_test.rs  manifest_test.rs  skeleton_test.rs  watcher_test.rs
docs/: DESIGN.md
extension/: .vscode-test.mjs  .vscodeignore  LICENSE  package-lock.json  package.json  tsconfig.json
extension/src/: binary-manager.ts  commands.ts  extension.ts  mcp-config.ts  statusbar.ts
extension/src/test/: binary-manager.test.ts  extension.test.ts  mcp-config.test.ts  statusbar.test.ts
